--- a/frontend/ui/src/styles.scss
+++ b/frontend/ui/src/styles.scss
@@ -2,3 +2,30 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.red-snackbar {
+  background: black !important;
+  color: white !important;
+  --mdc-snackbar-container-color: rgb(243, 118, 118) !important;
+}
+
+.green-snackbar {
+  background: #00ff7f !important;
+  color: black !important;
+  --mdc-snackbar-container-color: #00ff7f !important;
+}
+
+.mat-snack-bar-container {
+  margin-right: auto !important;
+  margin-left: auto !important;
+  width: 40vw !important;
+  min-width: 90% !important;
+  max-width: 100vw !important;
+  margin-top: 70px !important;
+  padding: 20px !important;
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
