--- a/frontend/ui/src/styles.scss
+++ b/frontend/ui/src/styles.scss
@@ -11,7 +11,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .green-snackbar {
-  background: #00ff7f !important;
+  background: green !important;
   color: black !important;
   --mdc-snackbar-container-color: #00ff7f !important;
 }
