--- a/frontend/ui/src/app/components/video-detail/video-detail.component.html
+++ b/frontend/ui/src/app/components/video-detail/video-detail.component.html
@@ -1,16 +1,49 @@
-<div class="container-fluid mt-2" >
-  <mat-grid-list cols="6" rowHeight="100px" gutterSize="10px">
-    <mat-grid-tile class="videoPlayer" colspan="4" rowspan="4">
-      <app-video-player *ngIf="videoUrl" [videoUrl]='videoUrl'></app-video-player>
-    </mat-grid-tile>
-    <mat-grid-tile class="suggestion" colspan="2" rowspan="7">Suggestion</mat-grid-tile>
-    <mat-grid-tile colspan="4" >
-     <span class="title">{{title}}</span>
-    </mat-grid-tile>
-    <mat-grid-tile colspan="2" style="background-color:darkred">subscribe</mat-grid-tile>
-    <mat-grid-tile colspan="2" style="background-color:cadetblue;">like share and bel-icon</mat-grid-tile>
-    <mat-grid-tile colspan="4">
-      <span class="desc lead">{{description}}</span>
-    </mat-grid-tile>
-  </mat-grid-list>
+<div class="container-fluid videoContainer">
+  <div class="videoDetail">
+    <div class="videoPlayer">
+      <app-video-player *ngIf="videoUrl" [videoUrl]="videoUrl"></app-video-player>
+    </div>
+    <div class="suggestionBar">Suggestion</div>
+    <div class="title">{{video.title}}</div>
+    <div class="channel">
+      <div>
+        <mat-card-header>
+          <button mat-icon-button>
+            <mat-icon>account_circle</mat-icon>
+          </button>
+          <div>
+            <mat-card-title class="channelName">JsKool</mat-card-title>
+            <br>
+            <mat-card-subtitle class="subtitles">4.2K Subscribers</mat-card-subtitle>
+          </div>
+          <button class="subscribe-button" mat-raised-button color="warn" *ngIf="isUnsubscribed" (click)="subscribedUser()">SUBSCRIBE</button>
+          <button class="subscribe-button-clicked" mat-raised-button color="accent" *ngIf="isSubscribed" (click)="unSubscribedUser()">UNSUBSCRIBED</button>
+        </mat-card-header>
+      </div>
+      <div>
+        <span class="like-dislike-section">
+          <button mat-icon-button class="thumbs-up" (click)="likeVideo()">{{video.likedCount}}
+            <mat-icon>thumb_up_off_alt</mat-icon></button>
+          <button mat-icon-button class="thumbs-down" (click)="disLikeVideo()">{{video.disLikedCount}}
+            <mat-icon>thumb_down_off_alt</mat-icon></button>
+        </span>
+      </div>
+    </div>
+
+    <div class="videoDesc">
+      <mat-divider></mat-divider>
+      <div class="videoTags">
+        <mat-chip>Spring Boot</mat-chip>
+        <mat-chip>Angular</mat-chip>
+      </div>
+      <span>{{video.viewCount}} Views <span>14 OCT, 2023</span></span><br>
+      <span>{{video.description}}</span>
+    </div>
+
+    <div class='commentSection'>
+      <app-comment [videoId]="videoId"></app-comment>
+    </div>
+  </div>
 </div>
+
+
