--- a/frontend/ui/src/app/components/history/history.component.html
+++ b/frontend/ui/src/app/components/history/history.component.html
@@ -1,1 +1,10 @@
-<p>history works!</p>
+<div>
+  <h4>History</h4>
+</div>
+<div class='videoCard'>
+  <div *ngFor='let video of videos'>
+    <div>
+      <app-video-card [video]="video"></app-video-card>
+    </div>
+  </div>
+</div>
