--- a/frontend/ui/src/app/components/video-detail/video-detail.component.scss
+++ b/frontend/ui/src/app/components/video-detail/video-detail.component.scss
@@ -14,6 +14,14 @@
 
     .suggestionBar {
       grid-row: 1/3;
+      width: 100%;
+      overflow: hidden;
+
+      .card {
+        display: grid;
+        grid-template-columns: 1fr 1.5fr;
+        gap:10px
+      }
     }
 
     .title {
@@ -72,7 +80,8 @@
       .videoTags {
         display: flex;
         gap: 5px;
-        padding: 10px 0;
+        padding: 15px 0;
+        flex-wrap: wrap;
       }
     }
 
@@ -83,44 +92,3 @@
 
 }
 
-//.videoPlayer {
-//  padding: 10px;
-//}
-//
-//.suggestion {
-//  overflow-y: scroll;
-//  overflow-x: hidden;
-//  background-color: antiquewhite;
-//}
-//
-//app-video-player {
-//  width: 100%;
-//  height: 100%;
-//}
-//
-//
-//.title {
-//  text-align: left;
-//  font-size: 1rem;
-//  justify-content: flex-start;
-//  align-items: flex-start;
-//}
-//
-//mat-grid-tile {
-//  border-radius: 10px;
-//
-//  .title {
-//    padding: 5px;
-//    font-size: 2rem;
-//    width: 100%;
-//    height: 100%;
-//    text-align: left;
-//  }
-//
-//  .desc {
-//    width: 100%;
-//    height: 100%;
-//    text-align: left;
-//  }
-//
-//}
