--- a/frontend/ui/src/app/layout/header/header.component.html
+++ b/frontend/ui/src/app/layout/header/header.component.html
@@ -1,7 +1,7 @@
 <div class='container-fluid'>
   <mat-toolbar color="primary">
     <button mat-icon-button class="example-icon"
-            aria-label="Example icon-button with menu icon">
+            aria-label="Example icon-button with menu icon" (click)="onToggleSidenav()">
       <mat-icon>menu</mat-icon>
     </button>
     <span>Youtube Clone</span>
@@ -18,7 +18,7 @@
       <mat-icon>account_circle</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item routerLink="/channel" >View Profile</button>
+      <button mat-menu-item routerLink='/channel' >View Profile</button>
       <button mat-menu-item (click)="logout()">Logout</button>
     </mat-menu>
 
