--- a/frontend/ui/src/app/components/video-card/video-card.component.html
+++ b/frontend/ui/src/app/components/video-card/video-card.component.html
@@ -1,7 +1,7 @@
 <mat-card class="example-card "  routerLink='/video-detail/{{video.videoId}}'>
   <img class="thumbImag" mat-card-image [src]="video.thumbnailUrl" alt="video thumnail">
   <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
+    <div mat-card-avatar class="example-header-image" [ngStyle]="{'background-image': 'url(' + userProfileUrl + ')'}"></div>
     <mat-card-title class="card-title">{{video.title}}</mat-card-title>
     <mat-card-subtitle>Jskool</mat-card-subtitle>
     <mat-card-subtitle>{{video.viewCount}} Views <span>{{timeAgo}} </span> </mat-card-subtitle>
